# engine

./: .editorconfig  .gitignore  .gitmodules  README.md  gen_cmake_win.cmd
cmake/: CMakeLists.txt  utils.cmake
cmake/bgfx/: CMakeLists.txt
cmake/lua/: CMakeLists.txt
editor/: CMakeLists.txt
editor/src/: main.cpp  main_window.cpp  main_window.hpp
src/: application.hpp  entity.cpp  entity.hpp  error.cpp  error.hpp  handle.cpp  handle.hpp  iv2.hpp  ma7th.hpp  main.cpp  render.cpp  render.hpp  sparse_set.hpp  system.cpp  system.hpp  tilemap.hpp  transform.cpp  transform.hpp  utils.hpp  v2.hpp
src/shaders/: compile_shaders.bat  fs.bin.h  fs.sc  varying.def.sc  vs.bin.h  vs.sc
